<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/size_standard"
                android:gravity="center_vertical"
                android:layout_marginBottom="24dp" >



        <Button
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/size_standard"
            android:gravity="center_vertical"
            android:backgroundTint="@color/white"
            app:icon="@drawable/arrow_back"
            app:iconTint="@color/black" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings_button"
            android:textColor="@color/black"
            android:textSize="22sp" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/size_standard"
            android:layout_marginTop="101dp"
            android:text="@string/dark_theme"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/size_standard"
            android:layout_marginTop="162dp"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/size_standard"
            android:layout_marginTop="223dp"
            android:text="@string/support_message"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="@dimen/size_standard"
            android:layout_marginTop="284dp"
            android:text="@string/user_agreement"
            android:textColor="@color/black"
            android:textSize="16sp"/>




</LinearLayout>